Fixed some mobile layout issues,more to come

--- a/app/assets/stylesheets/catarse_bootstrap/_extra.sass
+++ b/app/assets/stylesheets/catarse_bootstrap/_extra.sass
@@ -201,6 +201,11 @@ select.date
   background-size: cover
   overflow: hidden
 
+  @media (max-width: 414px) and (orientation: portrait)
+    height: 200px
+    position: static
+    opacity: 1
+
 
 
 .hero-container
@@ -212,6 +217,12 @@ select.date
   @media (min-width: 991px)
     height: 600px
 
+  @media (max-width: 414px) and (orientation: portrait)
+    background-color: #fff
+    height: auto
+    min-height: 490px
+    border-bottom: 1px solid #ddd
+
   .hero-text
     position: relative
     top: 50%
@@ -222,6 +233,14 @@ select.date
     text-shadow: 0 0 30px rgba(0, 0, 0, 0.6), 0 1px 0 rgba(0, 0, 0, 0.7)
     letter-spacing: 1px
     width: 50%
+
+    @media (max-width: 414px) and (orientation: portrait)
+      color: #666
+      text-shadow: 0 0
+      width: 100%
+      position: static
+      transform: translate(0,0)
+      padding: 1em 2em 0
 
   .hero-big-text
     letter-spacing: 2px
